test/method/missing_arguments.lox
struct Foo {
  fn method(a, b) {}
}

Foo().method(1) // error: expected 2 arguments but got 1
